--- a/home/architecture.html
+++ b/home/architecture.html
@@ -77,14 +77,14 @@
 <hr>
 <p>The Temenos PaaS platform promotes the concept of simplified and standardised change promotion through the IT landscape.</p>
 <p><img src="images/architecture-arrows.png" alt=""></p>
-<p>Typical organisations have a number of non-production (i.e. development/test) environments, where changes are implemented and checked prior to deployment to production systems.  The Devops movement seeks to improve this QA process through means of automation, which both allows an increase in speed in change promotion, and a reduction in the risk of manual errors when promoting changes.</p>
+<p>Typical organisations have a number of non-production (i.e. development/test) environments, where changes are implemented and checked prior to deployment to production systems. The Devops movement seeks to improve this QA process through means of automation, which both allows an increase in speed in change promotion, and a reduction in the risk of manual errors when promoting changes.</p>
 <p>The Temenos PaaS platform includes a simple and repeatable method of collating changes (both configuration and customisation) which subsequently is simple to promote from environment to environment.</p>
-<p>In addition, the core function of the Temenos PaaS platform is to simplify the environment provisioning process, which means if extra stages in the change flow are required (e.g. for additional testing phases), it becomes far simpler to spin up temporary environments for these purposes.#</p>
+<p>In addition, the core function of the Temenos PaaS platform is to simplify the environment provisioning process, which means if extra stages in the change flow are required (e.g. for additional testing phases), it becomes far simpler to spin up temporary environments for these purposes.</p>
 <p>It should be noted that the Temenos PaaS platform only supplies non-production environments (also known as &#39;sandboxes&#39;), which means organisations will still require at least one non-production environment on representative hardware in order to sanity check changes prior to production release (see example below).</p>
 <p><img src="images/architecture-paas-deploy.png" alt=""></p>
 <p>Delegating platform and infrastructure responsibilities to a third party allows organisations to concentrate on what is important to them - applications and data.</p>
 <p><img src="images/architecture-responsabilities.png" alt=""></p>
-<p>The Temenos PaaS platform may be used for simple environment provisioning, or may be augmented by additional tools (such as Continuous Integration tooling) to provide a streamlined and automated development experience.  The change promotion mechansim within the PaaS platform is simple to plug into standard CI tooling to push code/config/data from environment to environment.  An example development flow is shown below:</p>
+<p>The Temenos PaaS platform may be used for simple environment provisioning, or may be augmented by additional tools (such as Continuous Integration tooling) to provide a streamlined and automated development experience. The change promotion mechansim within the PaaS platform is simple to plug into standard CI tooling to push code/config/data from environment to environment.  An example development flow is shown below:</p>
 <p><img src="images/architecture-process.png" alt=""></p>
 <h3 id="what-are-the-components-of-temenos-paas"><strong>What are the components of Temenos PaaS?</strong></h3>
 <hr>
@@ -128,12 +128,32 @@
 </thead>
 <tbody>
 <tr>
-<td style="text-align:left">Apply configuration/ customisation</td>
-<td style="text-align:left">Apply the necessary change components to create a customised sandbox configuration for an organisation</td>
+<td style="text-align:left">Provision a new sandbox</td>
+<td style="text-align:left">Create a sandbox</td>
+</tr>
+<tr>
+<td style="text-align:left">Scale a sandbox</td>
+<td style="text-align:left">Scale a sandbox horizontally by adding/removing additional T24 instances for a given database instance</td>
 </tr>
 <tr>
 <td style="text-align:left">Delete a sandbox</td>
 <td style="text-align:left">Delete a sandbox</td>
+</tr>
+<tr>
+<td style="text-align:left">Manage a user</td>
+<td style="text-align:left">Create/ edit/ delete a user</td>
+</tr>
+<tr>
+<td style="text-align:left">Apply configuration/ customisation</td>
+<td style="text-align:left">Apply the necessary change components to create a customised sandbox configuration for an organisation</td>
+</tr>
+<tr>
+<td style="text-align:left">Login to T24</td>
+<td style="text-align:left">Use the resultant customised sandbox</td>
+</tr>
+<tr>
+<td style="text-align:left">Import a database</td>
+<td style="text-align:left">Import a database into a sandbox</td>
 </tr>
 <tr>
 <td style="text-align:left">Export a database</td>
@@ -142,26 +162,6 @@
 <tr>
 <td style="text-align:left">Export a sandbox environment</td>
 <td style="text-align:left">Export a copy of a sandbox environment (file system level) for offline perusal</td>
-</tr>
-<tr>
-<td style="text-align:left">Import a database</td>
-<td style="text-align:left">Import a database into a sandbox</td>
-</tr>
-<tr>
-<td style="text-align:left">Login to T24</td>
-<td style="text-align:left">Use the resultant customised sandbox</td>
-</tr>
-<tr>
-<td style="text-align:left">Manage a user</td>
-<td style="text-align:left">Create/ edit/ delete a user</td>
-</tr>
-<tr>
-<td style="text-align:left">Provision a new sandbox</td>
-<td style="text-align:left">Create a sandbox</td>
-</tr>
-<tr>
-<td style="text-align:left">Scale a sandbox</td>
-<td style="text-align:left">Scale a sandbox horizontally by adding/removing additional T24 instances for a given database instance</td>
 </tr>
 </tbody>
 </table>
@@ -177,20 +177,20 @@
 </thead>
 <tbody>
 <tr>
-<td style="text-align:left">Continuous Integration Tool (Optional)</td>
-<td style="text-align:left">Continuous Integration tools may be used to help automate change promotion between environments.  There is no CI tool provided as part of the Temenos PaaS Platform, but these are useful in reducing manual tasks when managing environments.</td>
-</tr>
-<tr>
-<td style="text-align:left">Design Studio (Optional)</td>
-<td style="text-align:left">Design Studio is the IDE (Integrated Development Environment) produced by Temenos for developing changes in T24 systems.  Design Studio itself does not form part of the PaaS Platform, but change outputs from this tool are supported within the Configuration Repository.</td>
-</tr>
-<tr>
 <td style="text-align:left">Git</td>
 <td style="text-align:left">Git is a version control system, used by the PaaS platform to manage the Configuration Repository</td>
 </tr>
 <tr>
 <td style="text-align:left">SFTP Client</td>
 <td style="text-align:left">SFTP is the protocol used to download file exports (environment or database exports)</td>
+</tr>
+<tr>
+<td style="text-align:left">Continuous Integration Tool (Optional)</td>
+<td style="text-align:left">Continuous Integration tools may be used to help automate change promotion between environments.  There is no CI tool provided as part of the Temenos PaaS Platform, but these are useful in reducing manual tasks when managing environments.</td>
+</tr>
+<tr>
+<td style="text-align:left">Design Studio (Optional)</td>
+<td style="text-align:left">Design Studio is the IDE (Integrated Development Environment) produced by Temenos for developing changes in T24 systems.  Design Studio itself does not form part of the PaaS Platform, but change outputs from this tool are supported within the Configuration Repository.</td>
 </tr>
 </tbody>
 </table>
