--- a/home/overview.html
+++ b/home/overview.html
@@ -74,44 +74,25 @@
 <h1 id="temenos-cloud-development-platform"><strong>Temenos Cloud Development Platform</strong></h1>
 
 <h2 id="devx"><strong>DevX</strong></h2>
-<h3 id="product-definition">Product Definition</h3>
 <hr>
-<ul>
-<li><strong>What is Temenos PaaS?</strong></li>
-</ul>
-<p>Temenos PaaS is a type of cloud service offered by Temenos Cloud; it is a <em>Platform as a Service (PaaS)</em> that provides individuals and teams with the ability to manage and configure their own instances Temenos applications and approved 3rd party Plug &amp; Play applications from the Temenos ecosystem.</p>
-<ul>
-<li><strong>What is DevX?</strong></li>
-</ul>
-<p>“DevX” is a cloud based infrastructure for use during development, test, implementation, and ongoing change with configurable and scalable Temenos Suites on-demand. DevX enables you to create Environments, i.e. Temenos Suites on-demand, for non-production use in the cloud.  Environments can be requested and provisioned within minutes rather than weeks helping you accelerate your projects.  All Temenos Suites (Retail, Corporate, Wealth, Micro-Finance, and Islamic Banking) are readily available and allow you to develop and test your proof of concept, share development environments across dispersed teams, replicate production environments or use them for training. The speed, reliability, and agility of these environments will instantly add value to your implementation and scale your project delivery capacity.</p>
-<h3 id="benefits">Benefits</h3>
+<h3 id="what-is-temenos-paas">What is Temenos PaaS?</h3>
+<p>Temenos PaaS is a type of cloud service offered by Temenos Cloud; it is a <em>Platform as a Service (PaaS)</em> that provides individuals and teams with the ability to manage and configure their own instances of Temenos applications and approved 3rd party Plug &amp; Play applications from the Temenos ecosystem.</p>
+<h3 id="what-is-devx">What is DevX?</h3>
+<p>“DevX” is a cloud based infrastructure for use during development, test, implementation, and ongoing change with configurable and scalable Temenos Suites on-demand. DevX enables you to create Environments, i.e. Temenos Suites on-demand, for non-production use in the cloud.  Environments can be requested and provisioned within minutes rather than weeks helping you accelerate your projects. Retail Suite is readily available, with all other Temenos Suites (Corporate, Wealth, Micro-Finance and Islamic Banking) available on request and allow you to develop and test your proof of concept, share development environments across dispersed teams, replicate production environments or use them for training. The speed, reliability, and agility of these environments will instantly add value to your implementation and scale your project delivery capacity.</p>
+<h2 id="features"><strong>Features</strong></h2>
 <hr>
-<ul>
-<li><strong>What are the key benefits of DevX?</strong></li>
-</ul>
-<p>•   3 month reduction in all projects duration; by eliminating the time to create an environment</p>
-<p>•   Self-service environment provisioning, with centralised control or completely self-service</p>
-<p>•   Reduction in all projects duration; by eliminating the time to create or wait for an environment</p>
-<p>•   Operational expense; subscription service where you only pay for the cloud infrastructure you use – saving upwards of 90% of the infrastructure costs currently incurred</p>
-<p>•   Start development and testing in minutes, not weeks</p>
-<p>•   Reproduce identical environments</p>
-<p><br></p>
-<ul>
-<li><strong>What are the key features of DevX?</strong></li>
-</ul>
+<h3 id="what-are-the-key-features-of-devx">What are the key features of DevX?</h3>
 <p>•   Immediate provisioning of identical environments</p>
 <p>•   Deployment of change is fully automated; with plugins, add-ons, updates, packages, data, and configuration all being managed through a software configuration management repository</p>
 <p>•   Metered usage and full reporting</p>
 <p>•   Self-service data loading</p>
 <p>•   Self-service data export</p>
-<p>•   Highly available</p>
+<p>•   Self-service horizontally scalable (Scale up / down)</p>
+<p>•   Self-service access to log data</p>
+<p>•   Self-service job initiation</p>
+<p>•   Point in time rebuild of database (Backup / Restore)</p>
 <p>•   Managed OS patching</p>
-<p>•   Point in time Backup / Restore</p>
-<p>•   Scheduled jobs</p>
-<p>•   Scale up / down</p>
-<p>•   Logging to syslog</p>
-<p><br></p>
-<h2 id="implementation-faqs">Implementation FAQs</h2>
+<h2 id="implementation-faqs"><strong>Implementation FAQs</strong></h2>
 <hr>
 <ul>
 <li><strong>How can a customer gain access to DevX?</strong></li>
@@ -129,6 +110,14 @@
 <li><strong>Who will handle customers’ queries/issues for DevX?</strong></li>
 </ul>
 <p>Sales queries will be handled via the Temenos Cloud (TemenosCloud@temenos.com) support team. Support is available through a dedicated online support portal for cloud infrastructure issues.  All Product issues remain through the Temenos Customer Support. </p>
+<h2 id="data-and-security-considerations"><strong>Data and Security Considerations</strong></h2>
+<p>The most important consideration with respect to data on the Temenos PaaS platform is that it for non-production use only.  For clarification, no &#39;personally identifiable information&#39;; &#39;confidential&#39; or &#39;sensitive&#39; data may be stored on any sandbox environments.</p>
+<p>Other considerations include:</p>
+<p>•   Data is stored in UK datacentres</p>
+<p>•   Data is encrypted in transit</p>
+<p>•   Access to sandbox management facilities requires username/password and/or SSH certificates</p>
+<p>•   Environments can be deleted immediately by the user. All client-related data will be deleted by Temenos 60 days 
+after the termination of the agreement</p>
 <h2 id="temenos-cloud-management-of-organisations-users-and-environments">Temenos Cloud Management of Organisations, Users and Environments</h2>
 <hr>
 <ul>
@@ -162,15 +151,6 @@
 </ul>
 <p>Check the list with all available templates. These are latest Retail Suites versions:</p>
 <p><img src="images/templates.png" alt=""></p>
-<h2 id="how-temenos-cloud-templates-work">How Temenos Cloud Templates Work</h2>
-<p>The Temenos PaaS platform has the capability to provision environments in a variety of different configurations.  This capability is driven through the concept of &#39;Templates&#39; - a simplified view of the constituent elements which make up a sandbox configuration, including:</p>
-<ul>
-<li>Server Size</li>
-<li>Basic server setup and technology stack</li>
-<li>T24 version to deploy</li>
-</ul>
-<p>By default, new templates are added with each monthly release of T24. These templates follow a standard pattern, configuration and technology stack, but with the most recent releases of T24 being deployed.</p>
-<p>However, the Temenos PaaS platform team also offer the ability to create customised templates for clients.  For more information, please contact temenoscloud@temenos.com.</p>
 <p><br></p>
               <hr>
               
