--- a/home/overview.html
+++ b/home/overview.html
@@ -81,17 +81,20 @@
 <p>“DevX” is a cloud based infrastructure for use during development, test, implementation, and ongoing change with configurable and scalable Temenos Suites on-demand. DevX enables you to create Environments, i.e. Temenos Suites on-demand, for non-production use in the cloud.  Environments can be requested and provisioned within minutes rather than weeks helping you accelerate your projects. Retail Suite is readily available, with all other Temenos Suites (Corporate, Wealth, Micro-Finance and Islamic Banking) available on request and allow you to develop and test your proof of concept, share development environments across dispersed teams, replicate production environments or use them for training. The speed, reliability, and agility of these environments will instantly add value to your implementation and scale your project delivery capacity.</p>
 <h2 id="features"><strong>Features</strong></h2>
 <hr>
-<h3 id="what-are-the-key-features-of-devx">What are the key features of DevX?</h3>
-<p>•   Immediate provisioning of identical environments</p>
-<p>•   Deployment of change is fully automated; with plugins, add-ons, updates, packages, data, and configuration all being managed through a software configuration management repository</p>
-<p>•   Metered usage and full reporting</p>
-<p>•   Self-service data loading</p>
-<p>•   Self-service data export</p>
-<p>•   Self-service horizontally scalable (Scale up / down)</p>
-<p>•   Self-service access to log data</p>
-<p>•   Self-service job initiation</p>
-<p>•   Point in time rebuild of database (Backup / Restore)</p>
-<p>•   Managed OS patching</p>
+<h3 id="what-are-the-features-of-devx">What are the features of DevX?</h3>
+<ul>
+<li>Request and Provision identical environments within minutes </li>
+<li>Chose the application you wish from a predefined list of Temenos Suites</li>
+<li>Deployment of change is fully automated; All types of change, configuration, updates and data are managed through a software configuration management repository</li>
+<li>Stay in  control with metered usage and full reporting</li>
+<li>You decide and manage your data loading</li>
+<li>You can export your data at any point</li>
+<li>You decide and manage scalability according your demands (Scale up / down)</li>
+<li>Online access to live log data</li>
+<li>Full access and control of your CoB and all job services.</li>
+<li>You are in control of backup/rebuild of databases, at any point in time.</li>
+<li>Decide and select updates for your OS.</li>
+</ul>
 <h2 id="temenos-cloud-management-of-organisations-users-and-environments">Temenos Cloud Management of Organisations, Users and Environments</h2>
 <hr>
 <ul>
@@ -102,13 +105,6 @@
 <p><code>http://portal.staging.temenos.cloud:4200/organisations/1cg74hgepdevio/login</code></p>
 <p>The confirmation of your Organisation activation will contain the link and access instructions to your designated Organisation administrator. The administrator is the first and only user.</p>
 <p><img src="images/login-screen.png" alt=""></p>
-<p><br></p>
-<ul>
-<li><strong>Users</strong></li>
-</ul>
-<p>The Administrator can navigate to the Users section on the portal, create more users and invite them on the Development platform using the URL link. This way the administrator is in control of who receives the URL link and which users can access the Organisation.</p>
-<p>The users of the platform can access the Organisation, view their user profile and change their password. Should the users requires access to the source code repository they need to provide their public SSH Keys on the user profile section to gain access.</p>
-<p><img src="images/users.png" alt=""></p>
 <p><br></p>
 <ul>
 <li><strong>Environments</strong></li>
@@ -130,25 +126,8 @@
 </ul>
 <p>Check the list with all available templates. These are latest Retail Suites versions:</p>
 <p><img src="images/templates.png" alt=""></p>
-<h2 id="implementation-faqs"><strong>Implementation FAQs</strong></h2>
-<hr>
-<ul>
-<li><strong>How can a customer gain access to DevX?</strong></li>
-</ul>
-<p>The client should go through the normal procurement process for a Temenos Cloud service.  Temenos regional sales. </p>
-<ul>
-<li><strong>What are the minimum system requirements?</strong></li>
-</ul>
-<p>Internet access over https.</p>
-<ul>
-<li><strong>How can a customer deploy DevX?</strong></li>
-</ul>
-<p>The clients will be supplied with a URL and initial login, from there they will be able to create their own environments at their chosen release, add users for a developer or team of developers and then they can create the environments immediately. The users can create up to the maximum number of environments purchased, once the environment is destroyed, another individual or team can create a new environment up to the maximum. This means that many teams can share a single subscription, very useful to remove barriers within project and in fully automated testing.</p>
-<ul>
-<li><strong>Who will handle customers’ queries/issues for DevX?</strong></li>
-</ul>
-<p>Sales queries will be handled via the Temenos Cloud (TemenosCloud@temenos.com) support team. Support is available through a dedicated online support portal for cloud infrastructure issues.  All Product issues remain through the Temenos Customer Support. </p>
 <h2 id="data-and-security-considerations"><strong>Data and Security Considerations</strong></h2>
+<hr>
 <p>The most important consideration with respect to data on the Temenos PaaS platform is that it for <strong>non-production use only</strong>.  For clarification, no &#39;personally identifiable information&#39;; &#39;confidential&#39; or &#39;sensitive&#39; data may be stored on any sandbox environments.</p>
 <p>Other considerations include:</p>
 <p>•   Data is stored in UK datacentres</p>
