--- a/home/toc.html
+++ b/home/toc.html
@@ -84,6 +84,12 @@
                   <li>
                     <a href="benefits.html" name="" title="Benefits">Benefits</a>
                   </li>
+                  <li>
+                    <a href="users.html" name="" title="Users">Users</a>
+                  </li>
+                  <li>
+                    <a href="faq.html" name="" title="FAQ">FAQ</a>
+                  </li>
                 </ul>  </li>
             <li>
               <span class="expand-stub"></span>
