--- a/home/overview.html
+++ b/home/overview.html
@@ -75,10 +75,10 @@
 
 <h2 id="devx"><strong>DevX</strong></h2>
 <hr>
+<h3 id="what-is-temenos-devx-platform">What is Temenos DevX Platform?</h3>
+<p>“DevX” is a cloud based infrastructure for use during development, test, implementation, and ongoing change with configurable and scalable Temenos Suites on-demand. DevX enables you to create Environments, i.e. Temenos Suites on-demand, for non-production use in the cloud.  Environments can be requested and provisioned within minutes rather than weeks helping you accelerate your projects. Retail Suite is readily available, with all other Temenos Suites (Corporate, Wealth, Micro-Finance and Islamic Banking) available on request and allow you to develop and test your proof of concept, share development environments across dispersed teams, replicate production environments or use them for training. The speed, reliability, and agility of these environments will instantly add value to your implementation and scale your project delivery capacity.</p>
 <h3 id="what-is-temenos-paas">What is Temenos PaaS?</h3>
 <p>Temenos PaaS is a type of cloud service offered by Temenos Cloud; it is a <em>Platform as a Service (PaaS)</em> that provides individuals and teams with the ability to manage and configure their own instances of Temenos applications and approved 3rd party Plug &amp; Play applications from the Temenos ecosystem.</p>
-<h3 id="what-is-devx">What is DevX?</h3>
-<p>“DevX” is a cloud based infrastructure for use during development, test, implementation, and ongoing change with configurable and scalable Temenos Suites on-demand. DevX enables you to create Environments, i.e. Temenos Suites on-demand, for non-production use in the cloud.  Environments can be requested and provisioned within minutes rather than weeks helping you accelerate your projects. Retail Suite is readily available, with all other Temenos Suites (Corporate, Wealth, Micro-Finance and Islamic Banking) available on request and allow you to develop and test your proof of concept, share development environments across dispersed teams, replicate production environments or use them for training. The speed, reliability, and agility of these environments will instantly add value to your implementation and scale your project delivery capacity.</p>
 <h2 id="features"><strong>Features</strong></h2>
 <hr>
 <h3 id="what-are-the-features-of-devx">What are the features of DevX?</h3>
@@ -95,37 +95,22 @@
 <li>You are in control of backup/rebuild of databases, at any point in time.</li>
 <li>Decide and select updates for your OS.</li>
 </ul>
-<h2 id="temenos-cloud-management-of-organisations-users-and-environments">Temenos Cloud Management of Organisations, Users and Environments</h2>
+<h2 id="temenos-cloud-management-of-users-organisations-and-environments">Temenos Cloud Management of Users, Organisations and Environments</h2>
 <hr>
 <ul>
-<li><strong>Organisation ID</strong></li>
+<li><strong>Users</strong></li>
 </ul>
-<p>The Temenos Development Platform support multitenancy and Organisations are designed to be distinctive accounts.  </p>
-<p>Upon subscription you&#39;ll receive a <strong>unique</strong> Organisation Id as a URL link such as: </p>
-<p><code>http://portal.staging.temenos.cloud:4200/organisations/1cg74hgepdevio/login</code></p>
-<p>The confirmation of your Organisation activation will contain the link and access instructions to your designated Organisation administrator. The administrator is the first and only user.</p>
-<p><img src="images/login-screen.png" alt=""></p>
-<p><br></p>
+<p>The users of the platform can access the Organisation, view their user profile and change their password. </p>
+<p>Please check <a href="users.html"><strong>here</strong></a> more details about Users.</p>
 <ul>
-<li><strong>Environments</strong></li>
+<li><strong>Organisation and Environments</strong></li>
 </ul>
-<p>The Development platform has the capability to provision environments in a variety of different configurations. Users can initiate a new environment and select from a predefined list of templates the application, the release and stack they wish to provision. Each month we host a new template with the latest release of Temenos suite. </p>
-<p>The environments are customisable in terms of Name and brief description to explain their purpose. The templates follow the official Temenos configuration stack but it can be customised for Releases 2016 onwards.   </p>
-<p>Create your own environment:</p>
-<p><img src="images/new-environment.png" alt=""></p>
-<p><br></p>
-<ul>
-<li>Fill Name and Description fields</li>
-<li>Select one of the available templates from dropdown list, based on your requirements</li>
-<li>Click <strong>Create environment</strong></li>
-</ul>
-<p><img src="images/new-environment-create.png" alt=""></p>
-<p><br></p>
+<p>The Temenos Development Platform support multitenancy and Organisations are designed to be distinctive accounts.  Also it has the capability to provision environments in a variety of different configurations.</p>
+<p>Please check <a href="techguides/environment-creation-in-paas.html"><strong>here</strong></a> more details about Temenos cloud management of organisations and environments.</p>
 <ul>
 <li><strong>Templates</strong></li>
 </ul>
-<p>Check the list with all available templates. These are latest Retail Suites versions:</p>
-<p><img src="images/templates.png" alt=""></p>
+<p>The Temenos Development Platform can provision environments in a variety of different configurations through the concept of &#39;Templates&#39;. Please check <a href="temenos-cloud-templates.html"><strong>here</strong></a> for more details. </p>
 <h2 id="data-and-security-considerations"><strong>Data and Security Considerations</strong></h2>
 <hr>
 <p>The most important consideration with respect to data on the Temenos PaaS platform is that it for <strong>non-production use only</strong>.  For clarification, no &#39;personally identifiable information&#39;; &#39;confidential&#39; or &#39;sensitive&#39; data may be stored on any sandbox environments.</p>
